// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Prototypes/SummaryCard Summary Card 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="summary-card"
  >
    <header
      className="summary-card__header"
    >
      <h2
        className="summary-card__title"
      >
        <a
          href="#"
        >
          My Property
        </a>
      </h2>
    </header>
    <MinimalTable
      data={
        Array [
          Object {
            "dob": "05/01/1985",
            "name": "Jim Halpert",
            "relationship": "Husband",
          },
          Object {
            "dob": "05/01/1975",
            "name": "Michael Scott",
            "relationship": "Friend",
          },
          Object {
            "dob": "05/01/1985",
            "name": "Jim Halpert",
            "relationship": "Husband",
          },
        ]
      }
      headers={
        Object {
          "dob": "Date of Birth",
          "name": "Name",
          "relationship": "Relationship",
        }
      }
    >
      <Component
        cellClassName="px-5 py-3"
        data={
          Array [
            Object {
              "dob": "05/01/1985",
              "name": "Jim Halpert",
              "relationship": "Husband",
            },
            Object {
              "dob": "05/01/1975",
              "name": "Michael Scott",
              "relationship": "Friend",
            },
            Object {
              "dob": "05/01/1985",
              "name": "Jim Halpert",
              "relationship": "Husband",
            },
          ]
        }
        headers={
          Object {
            "dob": "Date of Birth",
            "name": "Name",
            "relationship": "Relationship",
          }
        }
        tableClassName="td-plain th-plain"
      >
        <div
          style={
            Object {
              "overflowX": "auto",
            }
          }
        >
          <table
            className="w-full text-sm td-plain th-plain"
          >
            <thead>
              <Component>
                <tr>
                  <Component
                    key=""
                  >
                    <th>
                      Name
                    </th>
                  </Component>
                  <Component
                    key=""
                  >
                    <th>
                      Relationship
                    </th>
                  </Component>
                  <Component
                    key=""
                  >
                    <th>
                      Date of Birth
                    </th>
                  </Component>
                </tr>
              </Component>
            </thead>
            <tbody>
              <Component
                id="row-"
                key=""
              >
                <tr
                  id="row-"
                >
                  <Component
                    className="px-5 py-3"
                    headerLabel="Name"
                    key=""
                  >
                    <td
                      className="px-5 py-3"
                      data-label="Name"
                    >
                      Jim Halpert
                    </td>
                  </Component>
                  <Component
                    className="px-5 py-3"
                    headerLabel="Relationship"
                    key=""
                  >
                    <td
                      className="px-5 py-3"
                      data-label="Relationship"
                    >
                      Husband
                    </td>
                  </Component>
                  <Component
                    className="px-5 py-3"
                    headerLabel="Date of Birth"
                    key=""
                  >
                    <td
                      className="px-5 py-3"
                      data-label="Date of Birth"
                    >
                      05/01/1985
                    </td>
                  </Component>
                </tr>
              </Component>
              <Component
                id="row-"
                key=""
              >
                <tr
                  id="row-"
                >
                  <Component
                    className="px-5 py-3"
                    headerLabel="Name"
                    key=""
                  >
                    <td
                      className="px-5 py-3"
                      data-label="Name"
                    >
                      Michael Scott
                    </td>
                  </Component>
                  <Component
                    className="px-5 py-3"
                    headerLabel="Relationship"
                    key=""
                  >
                    <td
                      className="px-5 py-3"
                      data-label="Relationship"
                    >
                      Friend
                    </td>
                  </Component>
                  <Component
                    className="px-5 py-3"
                    headerLabel="Date of Birth"
                    key=""
                  >
                    <td
                      className="px-5 py-3"
                      data-label="Date of Birth"
                    >
                      05/01/1975
                    </td>
                  </Component>
                </tr>
              </Component>
              <Component
                id="row-"
                key=""
              >
                <tr
                  id="row-"
                >
                  <Component
                    className="px-5 py-3"
                    headerLabel="Name"
                    key=""
                  >
                    <td
                      className="px-5 py-3"
                      data-label="Name"
                    >
                      Jim Halpert
                    </td>
                  </Component>
                  <Component
                    className="px-5 py-3"
                    headerLabel="Relationship"
                    key=""
                  >
                    <td
                      className="px-5 py-3"
                      data-label="Relationship"
                    >
                      Husband
                    </td>
                  </Component>
                  <Component
                    className="px-5 py-3"
                    headerLabel="Date of Birth"
                    key=""
                  >
                    <td
                      className="px-5 py-3"
                      data-label="Date of Birth"
                    >
                      05/01/1985
                    </td>
                  </Component>
                </tr>
              </Component>
            </tbody>
          </table>
        </div>
      </Component>
    </MinimalTable>
  </div>
</div>
`;

exports[`Storyshots Prototypes/SummaryCard Summary Card Heading 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="summary-card"
  >
    <header
      className="summary-card__header bg-gray-100 border-b mb-2"
    >
      <h2
        className="summary-card__title"
      >
        <a
          href="#"
        >
          My Property
        </a>
      </h2>
      <p
        className="text-sm mt-3"
      >
        <span>
          1 Polk St, San Francisco, CA 94102
        </span>
        <span
          className="ml-4 pl-4 border-l border-gray-600"
        >
          Waitlist: 353
        </span>
      </p>
    </header>
    <MinimalTable
      data={
        Array [
          Object {
            "dob": "05/01/1985",
            "name": "Jim Halpert",
            "relationship": "Husband",
          },
          Object {
            "dob": "05/01/1975",
            "name": "Michael Scott",
            "relationship": "Friend",
          },
          Object {
            "dob": "05/01/1985",
            "name": "Jim Halpert",
            "relationship": "Husband",
          },
        ]
      }
      headers={
        Object {
          "dob": "Date of Birth",
          "name": "Name",
          "relationship": "Relationship",
        }
      }
    >
      <Component
        cellClassName="px-5 py-3"
        data={
          Array [
            Object {
              "dob": "05/01/1985",
              "name": "Jim Halpert",
              "relationship": "Husband",
            },
            Object {
              "dob": "05/01/1975",
              "name": "Michael Scott",
              "relationship": "Friend",
            },
            Object {
              "dob": "05/01/1985",
              "name": "Jim Halpert",
              "relationship": "Husband",
            },
          ]
        }
        headers={
          Object {
            "dob": "Date of Birth",
            "name": "Name",
            "relationship": "Relationship",
          }
        }
        tableClassName="td-plain th-plain"
      >
        <div
          style={
            Object {
              "overflowX": "auto",
            }
          }
        >
          <table
            className="w-full text-sm td-plain th-plain"
          >
            <thead>
              <Component>
                <tr>
                  <Component
                    key=""
                  >
                    <th>
                      Name
                    </th>
                  </Component>
                  <Component
                    key=""
                  >
                    <th>
                      Relationship
                    </th>
                  </Component>
                  <Component
                    key=""
                  >
                    <th>
                      Date of Birth
                    </th>
                  </Component>
                </tr>
              </Component>
            </thead>
            <tbody>
              <Component
                id="row-"
                key=""
              >
                <tr
                  id="row-"
                >
                  <Component
                    className="px-5 py-3"
                    headerLabel="Name"
                    key=""
                  >
                    <td
                      className="px-5 py-3"
                      data-label="Name"
                    >
                      Jim Halpert
                    </td>
                  </Component>
                  <Component
                    className="px-5 py-3"
                    headerLabel="Relationship"
                    key=""
                  >
                    <td
                      className="px-5 py-3"
                      data-label="Relationship"
                    >
                      Husband
                    </td>
                  </Component>
                  <Component
                    className="px-5 py-3"
                    headerLabel="Date of Birth"
                    key=""
                  >
                    <td
                      className="px-5 py-3"
                      data-label="Date of Birth"
                    >
                      05/01/1985
                    </td>
                  </Component>
                </tr>
              </Component>
              <Component
                id="row-"
                key=""
              >
                <tr
                  id="row-"
                >
                  <Component
                    className="px-5 py-3"
                    headerLabel="Name"
                    key=""
                  >
                    <td
                      className="px-5 py-3"
                      data-label="Name"
                    >
                      Michael Scott
                    </td>
                  </Component>
                  <Component
                    className="px-5 py-3"
                    headerLabel="Relationship"
                    key=""
                  >
                    <td
                      className="px-5 py-3"
                      data-label="Relationship"
                    >
                      Friend
                    </td>
                  </Component>
                  <Component
                    className="px-5 py-3"
                    headerLabel="Date of Birth"
                    key=""
                  >
                    <td
                      className="px-5 py-3"
                      data-label="Date of Birth"
                    >
                      05/01/1975
                    </td>
                  </Component>
                </tr>
              </Component>
              <Component
                id="row-"
                key=""
              >
                <tr
                  id="row-"
                >
                  <Component
                    className="px-5 py-3"
                    headerLabel="Name"
                    key=""
                  >
                    <td
                      className="px-5 py-3"
                      data-label="Name"
                    >
                      Jim Halpert
                    </td>
                  </Component>
                  <Component
                    className="px-5 py-3"
                    headerLabel="Relationship"
                    key=""
                  >
                    <td
                      className="px-5 py-3"
                      data-label="Relationship"
                    >
                      Husband
                    </td>
                  </Component>
                  <Component
                    className="px-5 py-3"
                    headerLabel="Date of Birth"
                    key=""
                  >
                    <td
                      className="px-5 py-3"
                      data-label="Date of Birth"
                    >
                      05/01/1985
                    </td>
                  </Component>
                </tr>
              </Component>
            </tbody>
          </table>
        </div>
      </Component>
    </MinimalTable>
  </div>
</div>
`;
